--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 name: Daily Script Run
 on:
   schedule:
-    - cron: '30 18 * * *'  # Runs daily at midnight UTC
+    - cron: '30 18 * * *'  # Runs daily at midnight IST
 jobs:
   run-script:
     runs-on: ubuntu-latest
