--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,19 +1,28 @@
-name: Daily Script Run
+name: actions
 on:
   schedule:
-    - cron: '30 18 * * *'  # Runs daily at midnight IST
+    - cron: '30 0 * * *'  # Runs daily at 6:00 AM IST
+  workflow_dispatch:  # Allows manual triggering for testing
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up Python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       
       - name: Configure Git User
         run: |
           git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git config --global user.name "${{ secrets.GIT_USER_NAME }}"
       
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+      
       - name: Run script
-        run: python3 upno.py
+        run: python upno.py
