--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.12' # Version of Python to use
           cache: 'pip' # Caches the pip packages to speed up the workflow
       
       - name: Configure Git User
